# Learning-cpp

./: .gitignore  BestPractices.txt  CMakeLists.txt  Doxyfile.in  README.md  TODO.txt  rebuild.bat
GeneralLib/: CMakeLists.txt  Camera.cpp  Camera.h  ComponentManager.h  Controller.cpp  Controller.h  ControllerHandler.cpp  ControllerSignals.h  Controllers.cpp  Controllers.h  Entity.cpp  Entity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  Model.cpp  Model.h  OGLHandler.cpp  OGLHandler.h  ResourceManager.cpp  ResourceManager.h  S_CommandComponent.h  S_ModelComponent.cpp  S_ModelComponent.h  S_MomentumComponent.h  S_PlayerStatsComponent.cpp  S_PlayerStatsComponent.h  S_PositionComponent.h  S_RotationComponent.h  S_ShipStatsComponent.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  (+10 more)
GeneralLib/ECS/: ComponentManager.inl  Entity.cpp  Entity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  S_ModelComponent.cpp  S_ShipStatsComponent.h  System.h  World.cpp  World.h
GeneralLib/ECS/Components/: Components.h  E_Components.cpp  E_Components.h  S_MomentumComponent.cpp  S_PlayerStatsComponent.h
GeneralLib/FileSystem/: FilePath.cpp  whereami.c  wrapFILE.h
GeneralLib/OpenGL/: Camera.cpp  Camera.h  Model.cpp  Model.h  OGLHandler.cpp  OGLHandler.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  loadOBJ.cpp  loadOBJ.h
GeneralLib/include/glad/: glad.h
GeneralLibTests/: CMakeLists.txt  testFilePath.cpp  testFileSystem.cpp  testLogger.cpp
PersonalDLL/: CMakeLists.txt  FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  whereami.c  whereami.h
PersonalDLLTests/: CMakeLists.txt  testFilePath.cpp  testFileSystem.cpp  testLogger.cpp
SDLExample3/: CMakeLists.txt  Quit.cpp  Quit.h  main.cpp
SpaceFight/: CMakeLists.txt  main.cpp
SpaceFight/Components/: Components.h  S_PlayerStatsComponent.h  S_PositionComponent.h  S_RotationComponent.h  S_SpriteComponent.cpp  S_SpriteComponent.h
SpaceFight/Systems/: C_HealthbarSystem.cpp  C_HealthbarSystem.h  C_MomentumSystem.cpp  C_MomentumSystem.h  C_SpriteSystem.cpp  C_SpriteSystem.h
learnopengl/: CMakeLists.txt  Shader.h  glad.c  main.cpp  rgbaFragmentShader.h  rgbaVertexShader.h  vertexShaderExample.h
resources/: 3dFragmentShader.glsl  3dVertexShader.glsl  HealthbarVertexShader.glsl  TexTransVertexShader.glsl  TexVertexShader.glsl  rgbaVertexShader.glsl
